--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="theme-color" content="#0a0a0a" />
     <meta name="description" content="A simple application for taking notes." />
-    <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script async src="https://unpkg.com/pwacompat" crossorigin="anonymous"></script>
     <title>Flying Notes</title>
   </head>
   <body>
