--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,19 @@
     <meta name="theme-color" content="#0a0a0a" />
     <meta name="description" content="A simple application for taking notes." />
     <link rel="manifest" href="manifest.json" />
-    <script async src="https://unpkg.com/pwacompat" crossorigin="anonymous"></script>
     <title>Flying Notes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
+
+    <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/react-router-dom@5.2.0/umd/react-router-dom.min.js"></script>
+    <script src="https://unpkg.com/recoil@0.3.1/umd/recoil.min.js"></script>
+    <script src="https://unpkg.com/react-is@17.0.2/umd/react-is.production.min.js"></script>
+    <script src="https://unpkg.com/styled-components@5.3.0/dist/styled-components.min.js"></script>
+    <script async src="https://unpkg.com/pwacompat@2.0.17/pwacompat.min.js"></script>
   </body>
 </html>
