Move normalize.css to a CDN

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="theme-color" content="#0a0a0a" />
-    <meta name="description" content="A simple application for taking notes." />
+    <meta name="description" content="An application for saving notes, lists and files." />
     <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
     <title>Flying Notes</title>
   </head>
   <body>
