Inject react scripts matching the environment

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
 
     <div id="root"></div>
 
-    <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+    <script src="<%= htmlWebpackPlugin.options.react %>"></script>
+    <script src="<%= htmlWebpackPlugin.options.reactDom %>"></script>
     <script src="https://unpkg.com/react-router-dom@5.2.0/umd/react-router-dom.min.js"></script>
     <script src="https://unpkg.com/recoil@0.3.1/umd/recoil.min.js"></script>
     <script async src="https://unpkg.com/pwacompat@2.0.17/pwacompat.min.js"></script>
