Add integrity to all CDNs

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
 
     <div id="root"></div>
 
-    <script src="<%= htmlWebpackPlugin.options.react %>"></script>
-    <script src="<%= htmlWebpackPlugin.options.reactDom %>"></script>
-    <script src="https://unpkg.com/react-router-dom@5.2.0/umd/react-router-dom.min.js"></script>
-    <script src="https://unpkg.com/recoil@0.4.0/umd/recoil.min.js"></script>
-    <script async src="https://unpkg.com/pwacompat@2.0.17/pwacompat.min.js"></script>
+    <script src="<%= htmlWebpackPlugin.options.react %>" integrity="<%= htmlWebpackPlugin.options.reactIntegrity %>" crossorigin="anonymous"></script>
+    <script src="<%= htmlWebpackPlugin.options.reactDOM %>" integrity="<%= htmlWebpackPlugin.options.reactDOMIntegrity %>" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/react-router-dom@5.2.0/umd/react-router-dom.min.js" integrity="sha384-uu1h1STKBG+s2XUOcChXN9bNEqz+L46YPtWznjNDRUYuAtMCWlKXyJcL5pZ+EL3z" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/recoil@0.4.0/umd/recoil.min.js" integrity="sha384-i67QxfsL0fB+ORMcEr4ssesDj9YuTD17lmZKYG+3VFY0sBHNsZBTBT89uOt0hYZy" crossorigin="anonymous"></script>
+    <script async src="https://unpkg.com/pwacompat@2.0.17/pwacompat.min.js" integrity="sha384-Rli908ex+eSk6Xo0v7OWhTha8ooKKFI2XDTQMLlU3yp5VrrY3+K6DmULV2FWtYbM" crossorigin="anonymous"></script>
   </body>
 </html>
