Replace all CDNs with splitChunks

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,6 @@
 
     <div id="root"></div>
 
-    <script src="<%= htmlWebpackPlugin.options.react.url %>" integrity="<%= htmlWebpackPlugin.options.react.integrity %>" crossorigin="anonymous"></script>
-    <script src="<%= htmlWebpackPlugin.options.reactDOM.url %>" integrity="<%= htmlWebpackPlugin.options.reactDOM.integrity %>" crossorigin="anonymous"></script>
-    <script src="<%= htmlWebpackPlugin.options.reactRouterDOM.url %>" integrity="<%= htmlWebpackPlugin.options.reactRouterDOM.integrity %>" crossorigin="anonymous"></script>
-    <script async src="<%= htmlWebpackPlugin.options.pwaCompat.url %>" integrity="<%= htmlWebpackPlugin.options.pwaCompat.integrity %>" crossorigin="anonymous"></script>
+    <script async src="https://unpkg.com/pwacompat@2.0.17/pwacompat.min.js" integrity="sha384-Rli908ex+eSk6Xo0v7OWhTha8ooKKFI2XDTQMLlU3yp5VrrY3+K6DmULV2FWtYbM" crossorigin="anonymous"></script>
   </body>
 </html>
