Self-host pwacompat

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
 
     <div id="root"></div>
 
-    <script async src="https://unpkg.com/pwacompat@2.0.17/pwacompat.min.js" integrity="sha384-Rli908ex+eSk6Xo0v7OWhTha8ooKKFI2XDTQMLlU3yp5VrrY3+K6DmULV2FWtYbM" crossorigin="anonymous"></script>
+    <script async src="pwacompat@2.0.17.min.js"></script>
   </body>
 </html>
